--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 theme: jekyll-theme-merlot
 title: Anthony's Github Homepage
 description: please work lol
+
+
+#My favorites
+
+##Coding Language
+**C++** is the ***best*** programming language. ~~Perl~~ --Java-- is not a good programming language. 
+
